--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "vitest.config.ts", "src/**/*.ts", "src/**/*.tsx"]
 }
